# panda_CTC_simulation

./: CMakeLists.txt  README.md
include/: pseudo_inversion.h
models/: my_panda.xml
models/meshes/: assem.stl  base.stl  base_initial.stl  big_square.stl  big_square_top.stl  cylinder.stl  five.stl  log.txt  modify_3_1.stl  modify_3_2.stl  modify_3_3.stl  modify_4_1.stl  modify_4_2.stl  modify_4_3.stl  modify_4_4.stl  modify_5_1.stl  modify_5_2.stl  modify_5_3.stl  modify_5_4.stl  modify_5_5.stl  peg.stl  peg_base.stl  round.stl  small_ass.stl  square.stl  three.stl  triangle.stl
src/: my_sim_CTC.cpp
